--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -50,6 +50,7 @@ body {
     border-radius: 20px;
     overflow: hidden;
     z-index: 1;
+    box-shadow: 0 10px 25px 0 rgba(0, 0, 0, 0.15);
 }
 
 .summary__img--header {
@@ -164,10 +165,12 @@ body {
 }
 
 @media (max-width: 800px) {
+    .wrapper__background--top {
+        background-image: url('../assets/pattern-background-mobile.svg');
+    }
     .summary__container--content {
         padding: 22px;
         min-height: 407px;
-        background-color: red;
     }
     .summary__title--header {
         font-size: 24px;
