--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -53,11 +53,21 @@ body {
     box-shadow: 0 10px 25px 0 rgba(0, 0, 0, 0.15);
 }
 
-.summary__img--header {
+/* .summary__img--header {
     width: 100%;
     padding: 0;
     margin: 0;
     display: block;
+} */
+
+.summary__img--container {
+    background-image: url('../assets/illustration-hero.svg');
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 100%;
+    max-height: 220px;
 }
 
 .summary__container--content {
@@ -170,6 +180,9 @@ body {
 @media (max-width: 800px) {
     .wrapper__background--top {
         background-image: url('../assets/pattern-background-mobile.svg');
+    }
+    .summary__img--container {
+        max-height: 160px;
     }
     .summary__container--content {
         padding: 22px;
