--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -53,21 +53,13 @@ body {
     box-shadow: 0 10px 25px 0 rgba(0, 0, 0, 0.15);
 }
 
-/* .summary__img--header {
-    width: 100%;
-    padding: 0;
-    margin: 0;
-    display: block;
-} */
-
 .summary__img--container {
     background-image: url('../assets/illustration-hero.svg');
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
     width: 100%;
-    height: 100%;
-    max-height: 220px;
+    height: 220px;
 }
 
 .summary__container--content {
@@ -182,7 +174,7 @@ body {
         background-image: url('../assets/pattern-background-mobile.svg');
     }
     .summary__img--container {
-        /* height: 160px; */
+        height: 160px;
         max-height: 160px;
     }
     .summary__container--content {
